# FlexiBrain

./: .gitignore  EXPLAINER_USAGE.md  LICENSE  NOTICE  README.md  THIRD_PARTY.md  background_removal_stats.json  captum_ig.py  data_process.py  dataset.py  downstream_main.py  draw.ipynb  extract_moe_features.py  flex_patchembed.py  flex_patchembed_timetospace.py  flexi_patch_embed.py  main.py  multi_explainer.py  pos_embed.py  pyproject.toml  requirements.txt  run_moe_analysis.sh  smooth_ig_visualization.py  test_background_removal_stats.py  train_with_moe_monitor.py  visualize_moe_tsne.py
Transfer_learning/: Thumbs.db  create_ADNI_dataset.py  eval.json  eval_mni.json  model_eval.py  plan_mni.json  transfer.py  transfer_avg_loss_6x6.csv  transfer_avg_loss_6x6.npy  transfer_avg_loss_6x6_minmax01.csv  transfer_avg_loss_6x6_minmax01.npy  transfer_avg_loss_6x6_zscore.csv  transfer_avg_loss_6x6_zscore.npy  transfer_avg_loss_9x9.csv  transfer_avg_loss_9x9.npy  transfer_avg_loss_minus_gold_6x6.csv  transfer_avg_loss_minus_gold_6x6.npy  transfer_avg_loss_minus_gold_9x9.csv  transfer_avg_loss_minus_gold_9x9.npy  transfer_minus_gold_6x6_minmax01.csv  transfer_minus_gold_6x6_minmax01.npy  transfer_minus_gold_6x6_minmax_pm1_vis.csv  transfer_minus_gold_6x6_minmax_pm1_vis.npy  transfer_minus_gold_6x6_zscore.csv  transfer_minus_gold_6x6_zscore.npy  transfer_minus_gold_zall.csv  transfer_minus_gold_zall.npy  transfer_minus_gold_zcol.csv  transfer_minus_gold_zcol.npy  transfer_minus_gold_zrow.csv  transfer_minus_gold_zrow.npy  transfer_plot.py  transfer_visulize.py
configs/: downstream_example.yaml  downstream_ppmi.yaml  pretrain_example.yaml
downstream_utils/: dataset_downstream.py  mamba.py  vit.py
(+167 files in other folders)
